--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
                     <a href="#" class="nav-link px-2 py-1 text-sm font-medium" data-page="about">關於阿光</a>
                 </nav>
                 <a href="https://docs.google.com/forms/d/e/1FAIpQLSfX_V4gYZbJsn542xggMgW3EzlvHGbBYbqQpNEYAm3sdNo6RQ/viewform?usp=sharing&ouid=106016043603344854000" target="_blank" class="hidden sm:inline-flex items-center px-3 py-1.5 border border-transparent text-xs font-medium rounded text-white bg-blue-600 hover:bg-blue-700 transition-colors shadow-sm">
+                    聯絡我            
                 </a>
             </div>
         </div>
@@ -182,7 +183,8 @@
                             
                             <div class="pt-4">
                                 <a href="https://docs.google.com/forms/d/e/1FAIpQLSfX_V4gYZbJsn542xggMgW3EzlvHGbBYbqQpNEYAm3sdNo6RQ/viewform?usp=sharing&ouid=106016043603344854000" target="_blank" class="inline-block bg-blue-600 text-white px-6 py-3 rounded-lg hover:bg-blue-700 transition-colors shadow-md">
-                                    寫信給阿光</a>
+                                    寫信給阿光
+                                </a>
                             </div>
                         </div>
                     `
@@ -326,4 +328,5 @@
     </script>
 </body>
 </html>
+
 
