--- a/index.html
+++ b/index.html
@@ -326,7 +326,16 @@
         // Initial Load
         loadPage('home');
     </script>
+    <footer class="bg-white border-t border-gray-200 mt-12">
+    <div class="max-w-7xl mx-auto py-6 px-4 sm:px-6 lg:px-8">
+        <p class="text-center text-sm text-gray-500">
+            &copy; 2025 范宸杰 (Alex Yang). All Rights Reserved. <br class="sm:hidden">
+            獨立人機協作研究 | 無限推論實驗室
+        </p>
+    </div>
+</footer>
 </body>
 </html>
+
 
 
