--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
             'about': [
                 {
                     id: 'about_alex',
-                    title: '關於范宸杰 (Alex Yang)',
+                    title: '關於范宸杰 ',
                     category: '探索者與遞迴者',
                     snippet: '從街頭觀察到無限推論，我是一位試圖在 AI 時代尋找真理與邊界的探索者。',
                     content: `
@@ -329,13 +329,14 @@
     <footer class="bg-white border-t border-gray-200 mt-12">
     <div class="max-w-7xl mx-auto py-6 px-4 sm:px-6 lg:px-8">
         <p class="text-center text-sm text-gray-500">
-            &copy; 2025 范宸杰 (Alex Yang). All Rights Reserved. <br class="sm:hidden">
+            &copy; 2025 范宸杰 . All Rights Reserved. <br class="sm:hidden">
             獨立人機協作研究 | 無限推論實驗室
         </p>
     </div>
 </footer>
 </body>
 </html>
+
 
 
 
