Update index.html with new design

--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
                             
                             <div class="pt-4">
                                 <a href="https://docs.google.com/forms/d/e/1FAIpQLSfX_V4gYZbJsn542xggMgW3EzlvHGbBYbqQpNEYAm3sdNo6RQ/viewform?usp=sharing&ouid=106016043603344854000" target="_blank" class="inline-block bg-blue-600 text-white px-6 py-3 rounded-lg hover:bg-blue-700 transition-colors shadow-md">
-                                    寫信給阿光
+                                    聯絡阿光
                                 </a>
                             </div>
                         </div>
@@ -336,6 +336,7 @@
 </footer>
 </body>
 </html>
+
 
 
 
