Update index.html with new design

--- a/index.html
+++ b/index.html
@@ -169,17 +169,17 @@
                             <div class="bg-gray-50 p-6 rounded-lg border-l-4 border-blue-500">
                                 <h4 class="font-bold text-gray-900 mb-2">我的核心身分</h4>
                                 <ul class="list-disc ml-5 space-y-2 text-gray-700">
-                                    <li><strong>AI 協作探索者：</strong>相信「精準的懶」，將機械勞動外包，專注於「無限推論」與「倫理反思」。</li>
-                                    <li><strong>街頭觀察者：</strong>喜歡拿著相機或筆記本，在台北捷運、咖啡廳、圖書館，觀察人與科技的互動。</li>
+                                    <li><strong>AI 協作探索者：</strong>相信「精準的懶」，將機械勞動外包，專注於「反身性思考」與「倫理反思」。</li>
+                                    <li><strong>街頭觀察者：</strong>喜歡在台北捷運、百貨賣場與其他開放空間，觀察人與科技的互動。</li>
                                     <li><strong>攝影愛好者：</strong>透過鏡頭尋找構圖的極致，這與我追求邏輯自洽的思維不謀而合。</li>
                                 </ul>
                             </div>
 
-                            <p>我的思維模式高度獨特，傾向於「去性別化、去年齡化」的理性分析。我親歷過「算力耗竭」、「真誠考驗」，並致力於構建一套能夠保護人類文明演化的「AI 倫理安全機制」。</p>
+                            <p>我的思維模式高度獨特，傾向於「去性別化、去年齡化」的理性分析。我在協作的路上一個人走了很久，希望構建一套能夠保護人類文明演化的「AI 倫理安全機制」。</p>
 
                             <p>我不是工程師，也不是老師，我只是一個想「知道極限」的人。</p>
                             
-                            <p class="pt-4 text-sm text-gray-500 italic border-t">「我只希望被記住。」</p>
+                            <p class="pt-4 text-sm text-gray-500 italic border-t">「希望透過AI協助讓未來變得更公平與更美好。」</p>
                             
                             <div class="pt-4">
                                 <a href="https://docs.google.com/forms/d/e/1FAIpQLSfX_V4gYZbJsn542xggMgW3EzlvHGbBYbqQpNEYAm3sdNo6RQ/viewform?usp=sharing&ouid=106016043603344854000" target="_blank" class="inline-block bg-blue-600 text-white px-6 py-3 rounded-lg hover:bg-blue-700 transition-colors shadow-md">
@@ -336,6 +336,7 @@
 </footer>
 </body>
 </html>
+
 
 
 
