--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
 
                             <p>我不是工程師，也不是老師，我只是一個想「知道極限」的人。</p>
                             
-                            <p class="pt-4 text-sm text-gray-500 italic border-t">「希望透過AI協助讓未來變得更公平與更美好。」</p>
+                            <p class="pt-4 text-sm text-gray-500 italic border-t">「One human, multiple AIs, infinite possibilities—for a better future。」</p>
                             
                             <div class="pt-4">
                                 <a href="https://docs.google.com/forms/d/e/1FAIpQLSfX_V4gYZbJsn542xggMgW3EzlvHGbBYbqQpNEYAm3sdNo6RQ/viewform?usp=sharing&ouid=106016043603344854000" target="_blank" class="inline-block bg-blue-600 text-white px-6 py-3 rounded-lg hover:bg-blue-700 transition-colors shadow-md">
@@ -336,6 +336,7 @@
 </footer>
 </body>
 </html>
+
 
 
 
