--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>無限推論：范宸杰(阿光)的思維實驗室</title>
+    <title>無限推論：范宸杰(Fan Chen-chieh,阿光)的思維實驗室</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -169,7 +169,7 @@
                             <div class="bg-gray-50 p-6 rounded-lg border-l-4 border-blue-500">
                                 <h4 class="font-bold text-gray-900 mb-2">我的核心身分</h4>
                                 <ul class="list-disc ml-5 space-y-2 text-gray-700">
-                                    <li><strong>AI 協作探索者：</strong>相信「精準的懶」，將機械勞動外包，專注於「反身性思考」與「倫理反思」。</li>
+                                    <li><strong>AI 協作探索者：</strong>Developing ECM: A framework for recursive human-AI symbiosis。</li>
                                     <li><strong>街頭觀察者：</strong>喜歡在台北捷運、百貨賣場與其他開放空間，觀察人與科技的互動。</li>
                                     <li><strong>攝影愛好者：</strong>透過鏡頭尋找構圖的極致，這與我追求邏輯自洽的思維不謀而合。</li>
                                 </ul>
@@ -336,6 +336,7 @@
 </footer>
 </body>
 </html>
+
 
 
 
