--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>無限推論：范宸杰(Fan Chen-chieh,阿光)的思維實驗室</title>
+    <title>無限推論：范宸杰(Fan Chen-chieh)的思維實驗室</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -72,7 +72,7 @@
 <body class="min-h-screen relative">
     <header class="bg-white shadow-sm sticky top-0 z-10">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-4 flex justify-between items-center">
-            <h1 class="text-xl sm:text-2xl font-serif text-blue-600 font-bold tracking-tight">無限推論 <span class="text-sm text-gray-400 font-sans font-normal ml-2 hidden sm:inline">by 范宸杰</span></h1>
+            <h1 class="text-xl sm:text-2xl font-serif text-blue-600 font-bold tracking-tight">無限推論 <span class="text-sm text-gray-400 font-sans font-normal ml-2 hidden sm:inline">by 范宸杰(Fan Chen-chieh)</span></h1>
             <div class="flex items-center space-x-2 sm:space-x-6">
                 <nav id="main-nav" class="space-x-2 sm:space-x-4">
                     <a href="#" class="nav-link px-2 py-1 text-sm font-medium active" data-page="home">文章列表</a>
@@ -157,12 +157,12 @@
             'about': [
                 {
                     id: 'about_alex',
-                    title: '關於范宸杰 ',
+                    title: '關於范宸杰(Fan Chen-chieh)',
                     category: '探索者與遞迴者',
                     snippet: '從街頭觀察到無限推論，我是一位試圖在 AI 時代尋找真理與邊界的探索者。',
                     content: `
                         <div class="space-y-6">
-                            <p class="text-xl font-serif text-gray-800">你好，我是范宸杰，網路上大家叫我「阿光」。</p>
+                            <p class="text-xl font-serif text-gray-800">你好，我是范宸杰(Fan Chen-chieh)，網路上大家叫我「阿光」。</p>
                             
                             <p>你也許是在街頭遇到拿著手剪名片的我，或許是偶然逛到這裡。這裡是我與 AI 協作的思維實驗室——紀錄著一位 49 歲的大叔，如何透過 AI，看見人類思維的邊界。</p>
 
@@ -329,13 +329,14 @@
 <footer class="bg-white border-t border-gray-200 mt-12">
     <div class="max-w-7xl mx-auto py-6 px-4 sm:px-6 lg:px-8">
         <p class="text-center text-sm text-gray-500">
-            &copy; 2025 范宸杰 . All Rights Reserved. <br class="sm:hidden">
+            &copy; 2025 范宸杰(Fan Chen-chieh) . All Rights Reserved. <br class="sm:hidden">
             獨立人機協作研究 | 無限推論實驗室
         </p>
     </div>
 </footer>
 </body>
 </html>
+
 
 
 
