--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
                         <div class="space-y-6">
                             <p class="text-xl font-serif text-gray-800">「One human, multiple AIs, infinite possibilities—for a better future。」</p>
                             
-                            <p>你也許是在街頭遇到拿著手剪名片的我，或許是偶然逛到這裡。這裡是我與 AI 協作的思維實驗室——紀錄著一位 49 歲的大叔，如何透過 AI，看見人類思維的邊界。</p>
+                            <p>我的ORCID:https://orcid.org/0009-0000-5317-7385你也許是在街頭遇到拿著手剪名片的我，或許是偶然逛到這裡。這裡是我與 AI 協作的思維實驗室——紀錄著一位 49 歲的大叔，如何透過 AI，看見人類思維的邊界。</p>
 
                             <div class="bg-gray-50 p-6 rounded-lg border-l-4 border-blue-500">
                                 <h4 class="font-bold text-gray-900 mb-2">我的核心身分</h4>
@@ -438,3 +438,4 @@
 </footer>
 </body>
 </html>
+
