--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
 
                             <p>我不是工程師，也不是老師，我只是一個想「知道極限」的人。</p>
                             
-                            <p class="pt-4 text-sm text-gray-500 italic border-t">[ 2026 年初預告 ] 目前正進行網頁全面改版中，屆時將發布關於「AI 用戶行為觀察」與「人機協作演化」的深度研究報告。</p>
+                            <p class="pt-4 text-sm text-gray-500 italic border-t">我的ORCID:https://orcid.org/0009-0000-5317-7385 [ 2026 年初預告 ] 目前正進行網頁全面改版中，屆時將發布關於「AI 用戶行為觀察」與「人機協作演化」的深度研究報告。</p>
                             
                             <div class="pt-4">
                                 <a href="https://docs.google.com/forms/d/e/1FAIpQLSfX_V4gYZbJsn542xggMgW3EzlvHGbBYbqQpNEYAm3sdNo6RQ/viewform?usp=sharing&ouid=106016043603344854000" target="_blank" class="inline-block bg-blue-600 text-white px-6 py-3 rounded-lg hover:bg-blue-700 transition-colors shadow-md">
@@ -438,4 +438,5 @@
 </footer>
 </body>
 </html>
+
 
