--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
                     <div id="hero-section" class="mb-12 text-center py-10 px-4 bg-white rounded-2xl shadow-sm border border-gray-100 fade-in">
                         <h2 class="text-2xl sm:text-3xl font-serif font-bold text-gray-800 mb-4">歡迎來到我的思維實驗室</h2>
                         <p class="text-gray-600 max-w-2xl mx-auto leading-relaxed">
-                            這是一個關於「人機協作」的真實紀錄。<br>
+                            我的ORCID連結 https://orcid.org/0009-0000-5317-7385 這是一個關於「人機協作」的真實紀錄。<br>
                             如果你收到過我那張<span class="text-blue-600 font-bold">手剪的名片</span>，那麼這裡就是那張紙片背後的完整世界。<br>
                             我透過「無限推論」與深度協作，探索 AI 時代下，人類思維的邊界與可能。
                         </p>
@@ -438,5 +438,6 @@
 </footer>
 </body>
 </html>
+
 
 
